--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -5,64 +5,149 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priyanshu Pandey Portfolio</title>
     <style>
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.8;
-      margin: 0;
-      padding: 0;
-    }
-    header, nav, section, footer {
-      padding: 24px;
-    }
-    nav ul {
-      display: flex;
-      gap: 18px;
-      padding: 0;
-    }
-    nav a {
-      text-decoration: none;
-      color: blue;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }  table {
-      border-collapse: collapse;
-      width: 100%;
-      max-width: 700px;
-    }
-    table, th, td {
-      border: 5px solid paleturquoise;
-      padding: 10px;
-      text-align: left;
-    }
-    .hero {
-      background-color: lavenderblush;
-      text-align: center;
-      padding: 60px 20px;
-    }
-    footer {
-      text-align: center;
-      background-color: hotpink;
-      margin-top: 40px;
-    }
-
-div {
-  border-style: solid;
-  border-top-color: coral;
+      body {
+    font-family: 'Poppins', sans-serif;
+    background-color: white;
+    color: #222;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
 }
-  </style>
-</head>
+
+
+header {
+    text-align: center;
+    background-color: blue;
+    color: white;
+    padding: 20px 0;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+header h1 {
+    margin: 0;
+}
+
+
+nav {
+    background-color:#4267b2;
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-weight: 500;
+}
+
+nav a:hover {
+    color: #90e0ef;
+}
+
+
+section {
+    background-color: white;
+    max-width: 850px;
+    margin: 25px auto;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+
+#about img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    display: block;
+    margin: 10px auto;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+}
+
+
+#projects ul {
+    list-style-type: square;
+    padding-left: 25px;
+}
+
+
+table {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 20px auto;
+    text-align: center;
+}
+
+table th, table td {
+    border: 2px solid #4a90e2;
+    padding: 10px;
+}
+
+table th {
+    background-color: #4a90e2;
+    color: white;
+}
+
+table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+
+form {
+    text-align: left;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+button {
+    background-color: #4267b2;
+    color: white;
+    padding: 10px 18px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+}
+
+button:hover {
+    background-color: #365899;
+}
+
+
+footer {
+    text-align: center;
+    margin: 30px 0;
+}
+    </style>
+   </head>
 <body>
+    
     <header>
-     <h1 style="color: blue;">PRIYANSHU PANDEY</h1>
         <nav>
+             <h1 style="color: blue;">PRIYANSHU PANDEY</h1>
+
             
-            <ol type="disk">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ol>
+ <ul>
+<li><a href="#about">About</a></li>
+<li><a href="#projects">Projects</a></li>
+ <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -72,7 +157,7 @@ div {
             <p>Hello! I am a web development student. This is my personal portfolio website.</p>
 
             <h2>About Me</h2>
-            <img src="portfolio.jpg" alt="Priyanshu's profile picture" height="200px" width="200px">
+            <img src="./portfolio.jpg" alt="Priyanshu's profile picture" height="200px" width="200px">
             <p>I am passionate about learning web development and building creative projects.</p>
         </section>
 
